# otus-homework-04-ip

./: CMakeLists.txt  Doxyfile
.github/workflows/: doxygen-gh-pages.yml  release.yml
docs/: Doxyfile
src/: main.cpp  traits.h
timus/: 1820.cpp  2100.cpp
